fix: Increase spacing in chat markdown for readability
Headings, paragraphs, and lists were too tightly packed making dense
bot responses hard to scan on mobile.

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -132,27 +132,27 @@
   h6 {
     font-size: 0.8125rem;
     font-weight: 700;
-    margin-top: 0.8em;
-    margin-bottom: 0.1em;
+    margin-top: 1.4em;
+    margin-bottom: 0.3em;
     line-height: 1.3;
     color: var(--color-od-bright);
   }
 
   p {
-    margin-top: 0.3em;
+    margin-top: 0.6em;
     margin-bottom: 0;
   }
 
   ul {
-    margin-top: 0.2em;
-    margin-bottom: 0.2em;
+    margin-top: 0.4em;
+    margin-bottom: 0.6em;
     padding-left: 1em;
     list-style-type: disc;
   }
 
   ol {
-    margin-top: 0.2em;
-    margin-bottom: 0.2em;
+    margin-top: 0.4em;
+    margin-bottom: 0.6em;
     padding-left: 1em;
     list-style-type: decimal;
   }
